# komorebi

./: CMakeLists.txt  Dockerfile  build.sh
.github/workflows/: build.yml
data/Other/: changelog  copyright
extra/wallpaper-creator/OnScreen/: FinalPage.vala  InitialPage.vala  NewWallpaperWindow.vala
src/: Utilities.vala
src/OnScreen/: AssetActor.vala  BackgroundWindow.vala  InfoWindow.vala  PreferencesWindow.vala  Thumbnail.vala  WallpapersSelector.vala
